# optimization-data-analysis

./: .gitignore  README.md  compare.ipynb  implementation.py  main.py  pyproject.toml  requirements.txt  test_indices.txt
lit_modules/: custom_wide_resnet_lit.py  densenet_lit.py  torchvision_wide_resnet_lit.py
mlruns/mlruns-densenet_CIFAR100/0/: meta.yaml
mlruns/mlruns-densenet_FashionMNIST/0/: meta.yaml
mlruns/mlruns-densenet_MNIST/0/: meta.yaml
mlruns/mlruns-densenet_MNIST/130205337055641038/: meta.yaml
mlruns/mlruns-densenet_STL10/957414270489868401/: meta.yaml
mlruns/mlruns-wideresnet_FashionMNIST/0/: meta.yaml
mlruns/mlruns-wideresnet_FashionMNIST/679712758622696958/: meta.yaml
mlruns/mlruns-wideresnet_MNIST/0/: meta.yaml
mlruns/mlruns-wideresnet_STL10/0/: meta.yaml
mlruns/mlruns-wideresnet_STL10/617196936271371042/: meta.yaml
model_training_notebooks/: densenet_FashionMNIST.ipynb  densenet_Imagenette.ipynb  densenet_MNIST.ipynb  densenet_STL10.ipynb  densenet_SVHN.ipynb  densenet_cifar10.ipynb  densenet_cifar100.ipynb  densenet_eurosat.ipynb  wideresnet_FashionMNIST.ipynb  wideresnet_Imagenette.ipynb  wideresnet_MNIST.ipynb  wideresnet_SVHN.ipynb  wideresnet_cifar10.ipynb  wideresnet_cifar100.ipynb  wideresnet_eurosat.ipynb
models/: densenet.ipynb  densenet.py  densenet_MNIST.ipynb  densenet_STL10.ipynb  densenet_cifar10.ipynb  densenet_cifar100.ipynb  model_utils.py  wide_resnet.py  wideresnet_MNIST.ipynb  wideresnet_STL10.ipynb  wideresnet_cifar10.ipynb
utils/: compare.ipynb  scheduler.py
(+253 files in other folders)
