[project]
name = "optimization-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "optuna>=4.2.1",
    "scikit-learn>=1.6.1",
    "ipykernel>=6.29.5",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
